--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+.DS_Store
+.vscode/
+data/
+temp/
+nohup.out
+
+/models/*
+!.gitkeep
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
